add session entity , session repo and session service